# lambda-adapter

./: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
cdk/: package-lock.json  types.ts
cdk/environment/dev/: config.ts
cdk/environment/prd/: config.ts
cdk/lib/: adapter-stack.ts
